force-app/main/default/objects/Event__c/fields/Accept_Travel_Fund__c.field-meta.xml
<CustomField>
    <fullName>Accept_Travel_Fund__c</fullName>
    <defaultValue>(&quot;Yes&quot;)</defaultValue>
    <label>Accept Travel Fund</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>