force-app/main/default/objects/Event__c/fields/Accept_Visa_Request__c.field-meta.xml
<CustomField>
    <fullName>Accept_Visa_Request__c</fullName>
    <label>Accept Visa Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>