force-app/main/default/objects/Event__c/fields/BillFromProject__c.field-meta.xml
<CustomField>
    <fullName>BillFromProject__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill From Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Project__c.Funding__c</field>
            <operation>equals</operation>
            <value>Funded</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>