force-app/main/default/objects/Event__c/fields/Budget_for_Travel_Fund__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_Travel_Fund__c</fullName>
    <label>Budget for Travel Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>