force-app/main/default/objects/Event__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LF Event</fullName>
            </value>
            <value>
                <fullName>Project Event</fullName>
            </value>
            <value>
                <fullName>3rd Party Event</fullName>
            </value>
            <value>
                <fullName>Non-LF Event</fullName>
            </value>
            <value>
                <fullName>Migrated Data</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>