force-app/main/default/objects/Event__c/fields/Community_Bridge_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Bridge_Event_Id__c</fullName>
    <description>This Field will store community Bridge Event Id on Event Object to add Beneficiary.</description>
    <label>Community Bridge Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>