force-app/main/default/objects/Event__c/fields/Cvent_Event_EventStatus__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_EventStatus__c</fullName>
    <label>Cvent Event EventStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>