force-app/main/default/objects/Event__c/fields/Cvent_Event_Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cvent Event Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>