force-app/main/default/objects/Event__c/fields/Cvent_Event_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_LastModifiedDate__c</fullName>
    <label>Cvent Event LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>