force-app/main/default/objects/Event__c/fields/Cvent_Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Link__c</fullName>
    <formula>if(
  Cvent_Event_Id__c &lt;&gt; &quot;&quot;,
  hyperlink(
    (
    &quot;https://&quot;
      &amp; if(Cvent_Event_Is_Sandbox__c, &quot;sandbox-app&quot;, &quot;app&quot;)
      &amp; &quot;.cvent.com/subscribers/events2/Overview/Overview/Index/View?evtstub=&quot;
      &amp; Cvent_Event_Id__c),
    &quot;Open in New Window&quot;
  ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cvent Event Link</label>
    <type>Text</type>
</CustomField>