force-app/main/default/objects/Event__c/fields/Cvent_Event_PlanningStatus__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_PlanningStatus__c</fullName>
    <label>Cvent Event PlanningStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>