force-app/main/default/objects/Event__c/fields/Cvent_Event_Project__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Project__c</fullName>
    <label>Cvent Event Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Grade Linux (AGL)</fullName>
            </value>
            <value>
                <fullName>Cloud Foundry (CF)</fullName>
            </value>
            <value>
                <fullName>Cloud Native Computing Foundation (CNCF)</fullName>
            </value>
            <value>
                <fullName>Hyperledger</fullName>
            </value>
            <value>
                <fullName>JS Foundation</fullName>
            </value>
            <value>
                <fullName>The Linux Foundation (LF)</fullName>
            </value>
            <value>
                <fullName>LF Deep Learning</fullName>
            </value>
            <value>
                <fullName>LF Energy</fullName>
            </value>
            <value>
                <fullName>LF Networking</fullName>
            </value>
            <value>
                <fullName>Node Foundation</fullName>
            </value>
            <value>
                <fullName>Xen Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>