force-app/main/default/objects/Event__c/fields/Cvent_Event_Region__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_Region__c</fullName>
    <label>Cvent Event Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>