force-app/main/default/objects/Event__c/fields/Cvent_Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Event_URL__c</fullName>
    <label>Cvent Event URL</label>
    <type>Url</type>
</CustomField>