force-app/main/default/objects/Event__c/fields/Cvent_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Id of the corresponding Cvent Event record</description>
    <externalId>true</externalId>
    <inlineHelpText>The Id of the corresponding Cvent Event record</inlineHelpText>
    <label>Cvent Id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>