force-app/main/default/objects/Event__c/fields/Embassy__c.field-meta.xml
<CustomField>
    <fullName>Embassy__c</fullName>
    <label>Embassy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian</fullName>
            </value>
            <value>
                <fullName>Belgian</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Hungarian</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Irish</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Romanian</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>South Korean</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Swiss</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>