force-app/main/default/objects/Event__c/fields/EMS_Number__c.field-meta.xml
<CustomField>
    <fullName>EMS_Number__c</fullName>
    <label>EMS Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>