force-app/main/default/objects/Event__c/fields/Event_Brochure_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Brochure_URL__c</fullName>
    <label>Event Brochure URL</label>
    <type>Url</type>
</CustomField>