force-app/main/default/objects/Event__c/fields/Event_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Time__c</fullName>
    <label>Event End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>