force-app/main/default/objects/Event__c/fields/Event_Facebook_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Facebook_URL__c</fullName>
    <label>Event Facebook URL</label>
    <type>Url</type>
</CustomField>