force-app/main/default/objects/Event__c/fields/Event_LinkedIN_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_LinkedIN_URL__c</fullName>
    <label>Event LinkedIN URL</label>
    <type>Url</type>
</CustomField>