force-app/main/default/objects/Event__c/fields/Event_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Name__c</fullName>
    <label>Event Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>