force-app/main/default/objects/Event__c/fields/Event_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_State__c</fullName>
    <label>Event Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>