force-app/main/default/objects/Event__c/fields/Event_Mobile_Logo__c.field-meta.xml
<CustomField>
    <fullName>Event_Mobile_Logo__c</fullName>
    <label>Event Mobile Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>