force-app/main/default/objects/Event__c/fields/Event_Mobile_Splash__c.field-meta.xml
<CustomField>
    <fullName>Event_Mobile_Splash__c</fullName>
    <label>Event Mobile Splash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>