force-app/main/default/objects/Event__c/fields/Event_Published__c.field-meta.xml
<CustomField>
    <fullName>Event_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Published</label>
    <type>Checkbox</type>
</CustomField>