force-app/main/default/objects/Event__c/fields/Event_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Event_Registrations__c</fullName>
    <label>Event Registrations</label>
    <summaryForeignKey>Event_Registrations__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>