force-app/main/default/objects/Event__c/fields/Event_Start_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_Text__c</fullName>
    <description>Formula to stringify Event Start date field.  This is to accomodate out of the box duplicate matching rules that do not allow date fields for matching.</description>
    <label>Event Start Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>