force-app/main/default/objects/Event__c/fields/Event_Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Twitter_URL__c</fullName>
    <label>Event Twitter URL</label>
    <type>Url</type>
</CustomField>