force-app/main/default/objects/Event__c/fields/Event_Web_Logo__c.field-meta.xml
<CustomField>
    <fullName>Event_Web_Logo__c</fullName>
    <label>Event Web Logo</label>
    <type>TextArea</type>
</CustomField>