force-app/main/default/objects/Event__c/fields/Event_Web_Splash__c.field-meta.xml
<CustomField>
    <fullName>Event_Web_Splash__c</fullName>
    <label>Event Web Splash</label>
    <type>Url</type>
</CustomField>