force-app/main/default/objects/Event__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EventId</label>
    <type>Text</type>
</CustomField>