force-app/main/default/objects/Event__c/fields/Expensify_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Expensify_Policy_ID__c</fullName>
    <label>Expensify Policy ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>