force-app/main/default/objects/Event__c/fields/Include_W9__c.field-meta.xml
<CustomField>
    <fullName>Include_W9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include W9</label>
    <type>Checkbox</type>
</CustomField>