force-app/main/default/objects/Event__c/fields/Manual_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Manual_Status_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manual Status Check</label>
    <type>Checkbox</type>
</CustomField>