force-app/main/default/objects/Event__c/fields/MCEventId__c.field-meta.xml
<CustomField>
    <fullName>MCEventId__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MCEventId</label>
    <type>Text</type>
</CustomField>