force-app/main/default/objects/Event__c/fields/Netsuite_Sync__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Netsuite Sync</label>
    <type>Checkbox</type>
</CustomField>