force-app/main/default/objects/Event__c/fields/NS_Income_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Income_GL_Account__c</fullName>
    <label>NS Income GL Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NetSuite_Income_GL_Account</valueSetName>
    </valueSet>
</CustomField>