force-app/main/default/objects/Event__c/fields/NS_Sync__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NS Sync</label>
    <type>Checkbox</type>
</CustomField>