force-app/main/default/objects/Event__c/fields/ProductExist__c.field-meta.xml
<CustomField>
    <fullName>ProductExist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductExist</label>
    <type>Checkbox</type>
</CustomField>