force-app/main/default/objects/Event__c/fields/Registration_Fees__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees__c</fullName>
    <description>This field is used to store the Registration fees for the events.</description>
    <label>Registration Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>