force-app/main/default/objects/Event__c/fields/Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Registration_Source__c</fullName>
    <label>Registration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>RegOnline</fullName>
            </value>
            <value>
                <fullName>EventBrite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>