force-app/main/default/objects/Event__c/fields/Sugar_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>