force-app/main/default/objects/Event__c/fields/TFR_Eventid__c.field-meta.xml
<CustomField>
    <fullName>TFR_Eventid__c</fullName>
    <description>This field is for Gravity forms.</description>
    <label>TFR_Eventid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>