force-app/main/default/objects/Event__c/fields/Total_Approved_Travel_Funds__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Travel_Funds__c</fullName>
    <description>Should calculate from Travel Fund Request</description>
    <label>Total Approved Travel Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>