force-app/main/default/objects/Event__c/fields/Total_Paid_Travel_Funds__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Travel_Funds__c</fullName>
    <label>Total Paid Travel Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>