force-app/main/default/objects/Event__c/fields/TravelFund_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TravelFund_End_Date__c</fullName>
    <description>SFDC-604 - This field is used to capture TravelFund End Date.</description>
    <label>TravelFund End Date</label>
    <type>Date</type>
</CustomField>