force-app/main/default/objects/Event__c/validationRules/Bill_From_Project_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_From_Project_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), 
				ISBLANK(BillFromProject__c),
				NOT(TEXT(Registration_Source__c) == &apos;Cvent&apos;)
				)</errorConditionFormula>
    <errorDisplayField>BillFromProject__c</errorDisplayField>
    <errorMessage>Bill From Project must be set to save the event</errorMessage>
</ValidationRule>