force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Event_Registrations__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Cvent_Id__c</columns>
    <columns>BillFromProject__c</columns>
    <columns>Cvent_Event_Region__c</columns>
    <columns>Event_Location_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cvent_Event_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>