force-app/main/default/objects/Event__c/listViews/Budget_Updates.listView-meta.xml
<ListView>
    <fullName>Budget_Updates</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>BillFromProject__c</columns>
    <columns>Budget_for_Travel_Fund__c</columns>
    <columns>Total_Approved_Travel_Funds__c</columns>
    <columns>Total_Paid_Travel_Funds__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Accept_Travel_Fund__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Budget Updates</label>
</ListView>