force-app/main/default/objects/Event__c/listViews/CNCF.listView-meta.xml
<ListView>
    <fullName>CNCF</fullName>
    <columns>NAME</columns>
    <columns>BillFromProject__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Event_Location_City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BillFromProject__c</field>
        <operation>startsWith</operation>
        <value>Cloud Native</value>
    </filters>
    <label>CNCF</label>
</ListView>