force-app/main/default/objects/Event__c/listViews/Cvent_Events.listView-meta.xml
<ListView>
    <fullName>Cvent_Events</fullName>
    <columns>NAME</columns>
    <columns>BillFromProject__c</columns>
    <columns>Event_Registrations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cvent_Event_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cvent Events</label>
</ListView>